--- a/style.css
+++ b/style.css
@@ -23,11 +23,11 @@ body {
   font-family: "Open Sans", sans-serif;
 }
 header {
-  min-height: 100vh;
+  /* min-height: 100vh; */
   margin-bottom: 5rem;
 }
 .container {
-  padding: 3rem 3.5rem;
+  padding: 2rem 3.5rem 0 3.5rem;
 }
 
 .co-head {
@@ -48,7 +48,7 @@ header {
 }
 
 .co-body {
-  margin-top: 5rem;
+  margin: 3rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -99,22 +99,26 @@ header {
   cursor: pointer;
   box-shadow: 2px 2px 5px hsla(224, 93%, 58%, 0.342);
 }
-.container-body .text button:hover {
+.co-body .text button:hover {
   opacity: 0.8;
 }
 
 .container1 {
+  margin-top: 7rem;
   min-height: 100vh;
   display: flex;
   background-image: url(images/bg-curve-desktop.svg);
   background-repeat: no-repeat;
 }
+.container-inner {
+  margin: 3rem;
+}
 .container1 .space1 {
-  margin-top: 6rem;
+  margin-top: 1rem;
   background-color: #f9f8fe;
 }
 .container1 .space1 .space2 {
-  padding: 4rem;
+  padding: 1rem;
   display: flex;
   justify-content: space-between;
 }
